--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bedu test Git</title>
     <Marquee><h1>Hola Bedu</h1></Marquee>
+
     
 </head>
-<body>
-    
+<body color="red">
+
 </body>
 </html>
