--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bedu test Git</title>
     <Marquee><h1>Hola Bedu</h1></Marquee>
-
+<h2>Cambio xd</h2>
     
-</head>
+</head>git
 <body color="red">
 
 </body>
